[2015-10-xx]
Version 0.7.4 UNRELEASED

- Bug fixes:

  * Retrieve again long descriptions (Closes: #801460)

    When disabling the #ifdef of HAVE_DDTP, it was done the wrong way around and
    the old code (untested for many years) compiled fine and didn't cause
    errors, but didn't retrieve long descriptions anymore (it did for short
    ones).

- User visible changes:

  * [cmdline] In versioned provides, include '=' symbol (Closes: #767393)

    At the moment, there is only one symbol ('='), and it is hardcoded in dpkg
    and apt, so doing the same to avoid possible confusion among users, as
    suggested by David Kalnischkies from APT Team.

  * [cmdline] "show" now shows arch of packages in multi-arch systems

    Until now, it was not appending the arch in Depends and other places, so
    there was output like:

      Package: dput-ng
      ...
      Conflicts: dput, dput
      Replaces: dput, dput
      Provides: dput

    Now this shows:

      Package: dput-ng
      ...
      Conflicts: dput, dput:i386
      Replaces: dput, dput:i386
      Provides: dput

- Internal changes:

  * In internal_mark_delete(), also check for auto-installability property of
    real packages providing virtual packages to stop them being marked for
    deletion.  can_remove_autoinstalled() checks for this anyway, but the
    implementation could change in the future, and it shouldn't hurt to double
    check.


[2015-10-07]
Version 0.7.3

- Bug fixes:

  * [cmdline] Correctly calculate the indentation for multi-byte encoded strings
    in command line "show" (Closes: #360202)

  * [curses] Show intended action when downgrading (Closes: #516517)

    In package view/info screen, it was not handling this action and not showing
    anything in this case.

  * Update internal state for upgrades/downgrades with target version after the
    action is performed (Closes: #787658, #714429)

    Thanks to David Kalnischkies and Julian Andres Klode from APT team for their