@@ -1,6 +1,15 @@
 [2015-10-xx]
 Version 0.7.4 UNRELEASED
 
+- New features:
+
+  * [curses] Show providers of virtual packages in "description" area
+    (Closes: #103964)
+
+    The description area (bottom half of the screen in the default view) was
+    completely empty for virtual packages.  Now it shows the list of "real"
+    packages providing the virtual package, in a nicely formatted list.
+
 - Bug fixes:
 
   * Retrieve again long descriptions (Closes: #801460)
